# test_lakshmi

./: Dockerfile  app.py  pyproject.toml
docker/: .env  docker-compose-base.yml  docker-compose.yml  entrypoint.sh
